--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.7.5",
-    "uuid": "^8.3.0"
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
