--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 
 # misc
 .DS_Store
-.env.local
+.env.production
 .env.development.local
 .env.test.local
 .env.production.local
@@ -24,3 +24,4 @@ yarn-error.log*
 
 debug.log
 /debug.log
+/.env.production
